@@ -19,9 +19,6 @@ dependencies {
 
     // HTTP client for unit tests
     testCompile("org.apache.httpcomponents:fluent-hc:4.5.3")
-
-    // Guava for tests
-    testCompile("com.google.guava:guava:23.1-jre")
 }
 
 tasks {
@@ -32,8 +29,8 @@ tasks {
 
 application {
     // Define the main class for the application
-    mainClassName = "ru.mail.polis.Cluster"
+    mainClassName = "ru.mail.polis.Server"
 
     // And limit Xmx
-    applicationDefaultJvmArgs = listOf("-Xmx1g", "-Xverify:none")
+    applicationDefaultJvmArgs = listOf("-Xmx1g")
 }
